<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="15sp">

        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:textSize="22sp"
            android:text="@string/height"/>

        <EditText
            android:id="@+id/heightEditText"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:hint="@string/heightHint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="5sp">

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="22sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp" />

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/weightHint"
            android:textSize="22sp"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_marginTop="5sp"
        android:layout_gravity="center"
        android:onClick="calculateBMI"/>

    <TextView
        android:id="@+id/bmiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        android:textSize="22sp"
        android:layout_marginTop="5sp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/bmiCatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/bmiCat"
        android:textSize="22sp"
        android:layout_gravity="center"/>
</LinearLayout>